--- a/app/src/main/res/values-el/strings.xml
+++ b/app/src/main/res/values-el/strings.xml
@@ -17,20 +17,20 @@
 
     <string name="checking_for_updates">Έλεγχος για ενημερώσεις…</string>
     <string name="magisk_update_available">Το Magisk v%1$s είναι διαθέσιμο!</string>
-    <string name="cannot_check_updates">Αδυναμία ελέγχου για ενημερώσεις, δεν έχει Internet;</string>
-    <string name="up_to_date">Τελευταία έκδοση του %1$s εγκατεστημένη</string>
+    <string name="cannot_check_updates">Αδυναμία ελέγχου για ενημερώσεις, δεν έχει internet;</string>
+    <string name="up_to_date">Η τελευταία έκδοση του %1$s είναι εγκατεστημένη</string>
     <string name="root_error">Υπάρχει root αλλά όχι άδεια για root, δεν επιτρέπεται;</string>
     <string name="not_rooted">Δεν υπάρχει root</string>
     <string name="proper_root">Rooted κανονικά</string>
     <string name="safetyNet_check_text">Πατήστε για έλεγχο του SafetyNet</string>
     <string name="checking_safetyNet_status">Έλεγχος κατάστασης SafetyNet…</string>
-    <string name="safetyNet_check_success">Επιτυχημένος έλεγχος SafetyNet</string>
+    <string name="safetyNet_check_success">Ο Έλεγχος του SafetyNet Ήταν Επιτυχής</string>
     <string name="safetyNet_connection_failed">Αδυναμία σύνδεσης στο Google API</string>
     <string name="safetyNet_connection_suspended">Η σύνδεση στο Google API διακόπηκε</string>
-    <string name="safetyNet_no_response">Αδυναμία ελέγχου SafetyNet, δεν έχει Internet;</string>
-    <string name="safetyNet_fail">Αποτυχία SafetyNet: CTS profile mismatch</string>
+    <string name="safetyNet_no_response">Αδυναμία επαλήθευσης SafetyNet, δεν έχει Internet;</string>
+    <string name="safetyNet_fail">Άκυρο SafetyNet: CTS profile mismatch</string>
     <string name="safetyNet_pass">Το SafetyNet Πέρασε</string>
-    <string name="safetyNet_network_loss">Χάθηκε η σύνδεση στο δίκτυο</string>
+    <string name="safetyNet_network_loss">Αδυναμία σύνδεσης στο δίκτυο</string>
     <string name="safetyNet_service_disconnected">Η υπηρεσία τερματίστηκε</string>
     <string name="safetyNet_res_invalid">Η απόκριση είναι άκυρη</string>
     <string name="root_info_warning">Η λειτουργία είναι πολύ περιορισμένη</string>
@@ -203,8 +203,8 @@
     <string name="twentymin">20 λεπτά</string>
     <string name="thirtymin">30 λεπτά</string>
     <string name="sixtymin">60 λεπτά</string>
-    <string name="su_allow_toast">Παραχορούνται δικαιώματα υπερχρήστη στο %1$s</string>
-    <string name="su_deny_toast">Δεν παραχορούνται δικαιώματα υπερχρήστη στο %1$s</string>
+    <string name="su_allow_toast">Παραχωρήθηκαν δικαιώματα υπερχρήστη στο %1$s</string>
+    <string name="su_deny_toast">Απορρίφθηκαν τα δικαιώματα υπερχρήστη του %1$s</string>
     <string name="no_apps_found">Δεν βρέθηκαν εφαρμογές</string>
     <string name="su_snack_grant">Παραχορούνται δικαιώματα υπερχρήστη στο %1$s</string>
     <string name="su_snack_deny">Δεν παραχορούνται δικαιώματα υπερχρήστη στο %1$s</string>
