--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -140,6 +140,8 @@
     <string name="settings_notification_summary">Показывать уведомления об обновлении, когда доступна новая версия</string>
     <string name="settings_clear_cache_title">Очистка кеша</string>
     <string name="settings_clear_cache_summary">Очистить сохранённую информацию о сетевых репозиториях, заставляя приложение принудительно обновляться через Интернете</string>
+    <string name="language">Язык</string>
+    <string name="system_default">По умолчанию (системный)</string>
 
     <string name="settings_core_only_title">Режим Magisk Core</string>
     <string name="settings_core_only_summary">Включить возможности только уровня Core, все модули не будут загружены. MagiskSU, MagiskHide и внесистемные хосты останутся включенными</string>
